Made h1 smaller and quote text bigger

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="container">
                 <div class="row mb-3">
                     <div class="col-sm-12">
-                        <h1 id="cover-title" class="display-3">Business quotes</h1>
+                        <h1 id="cover-title" class="display-4">Business quotes</h1>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-sm-12">
+                    <div class="col-sm-10 offset-sm-1">
                         <div id="quote" class="card card-inverse card-info mb-3 text-center">
                             <div class="card-block">
                                 <blockquote class="card-blockquote">
